...
                            if(settingsChanged) {
                                chad.settings = ChadSettings(style: personality, name: name)
                                callback()
                            }
                            self.dismiss()
                        }, label: {
                            Label("Save", systemImage: "checkmark.circle")
                                .labelStyle(.titleAndIcon)
                        })
                    }
                }.navigationTitle("Settings")
            }
        }
...
